--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
           terraform_wrapper: false
          
       - name: Terraform Init
-        run: terraform init -backend=false
+        run: terraform init
         
       - name: Terraform fmt
         run: terraform fmt -check
