--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,9 @@
+steps:
 - id: 'tf init'
   name: 'hashicorp/terraform:0.11.14'
   entrypoint: 'sh'
-  args:
+  args: 
+  - '-c'
   - |
       terraform init
-
-- id: 'tf plan'
-  name: 'hashicorp/terraform:0.11.14'
-  entrypoint: 'sh'
-  args:
-  - |
-      terraform plan
-
-- id: 'tf apply'
-  name: 'hashicorp/terraform:0.11.14'
-  entrypoint: 'sh'
-  args:
-  - |       
-      terraform apply -auto-approve
-    
+      
