--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,7 @@
 steps:
 - id: 'tf init'
   name: 'hashicorp/terraform:0.11.14'
-  entrypoint: 'sh'
-  args: 
-  - '-c'
-  - |
-      terraform init
+  - terraform init
 
 - id: 'tf plan'
   name: 'hashicorp/terraform:0.11.14'
