--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 - id: 'tf init'
   name: 'hashicorp/terraform:0.11.14'
-  run: terraform init
+  args: [ terraform init ]
 
 - id: 'tf plan'
   name: 'hashicorp/terraform:0.11.14'
